# rust-template

./: .gitignore  Cargo.toml  README.md  clippy.toml  rust-toolchain.toml  rustfmt.toml
.devcontainer/: Dockerfile  devcontainer.json
hello-world/: Cargo.toml
